@@ -14,9 +14,9 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @TestOnly
@@ -46,8 +46,7 @@ public final class EditorCaretTestUtil {
     }
   }
 
-  public record CaretAndSelectionState(List<CaretInfo> carets, @Nullable TextRange blockSelection) {
-
+  public record CaretAndSelectionState(@NotNull @Unmodifiable List<@NotNull CaretInfo> carets, @Nullable TextRange blockSelection) {
     /**
      * Returns true if current CaretAndSelectionState contains at least one caret or selection explicitly specified
      */
@@ -155,7 +154,7 @@ public final class EditorCaretTestUtil {
     if (blockSelectionStartMarker != null) {
       blockSelection = new TextRange(blockSelectionStartMarker.getStartOffset(), blockSelectionEndMarker.getStartOffset());
     }
-    return new CaretAndSelectionState(Arrays.asList(carets.toArray(new CaretInfo[0])), blockSelection);
+    return new CaretAndSelectionState(List.copyOf(carets), blockSelection);
   }
 
   public static void setCaretsAndSelection(@NotNull Editor editor, @NotNull CaretAndSelectionState caretsState) {
